# ve.io-control-user-with-python

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
control_user_with_python/application/use_cases/users/: register.py
control_user_with_python/domain/intefaces/users/: __init__.py  register_repo.py
control_user_with_python/domain/use_cases/users/: __init__.py  register.py
tests/: base_test.py
tests/bdd/features/: test.feature
tests/bdd/features/steps/: test_test.py
tests/tdd/control_user_with_python/application/use_cases/: register_user_test.py
