[tool.poetry]
name = "base-project-for-python"
version = "0.1.0"
description = ""
authors = ["Wesley Steve <wesley.silva23@hotmail.com>"]
readme = "README.md"
packages = [{include = "base_project_for_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
