[tool.poetry]
name = "base-project-for-python"
version = "0.1.0"
description = ""
authors = ["Wesley Steve <wesley.silva23@hotmail.com>"]
readme = "README.md"
packages = [{include = "base_project_for_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
black = "^23.1.0"
isort = "^5.12.0"
taskipy = "^1.10.3"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
