[tool.poetry]
name = "base-project-for-python"
version = "0.1.0"
description = ""
authors = ["Wesley Steve <wesley.silva23@hotmail.com>"]
readme = "README.md"
packages = [{include = "base_project_for_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
black = "^23.1.0"
isort = "^5.12.0"
taskipy = "^1.10.3"
pylint = "^2.17.0"
pre-commit = "^3.2.0"
behave = "^1.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini.options]
pythonpath = "tests/"
addopts = "--doctest-modules"

[tool.black]
line_length = "79"

[tool.isort]
profile = "black"
line_length = "79"

[tool.taskipy.tasks]
lint = "black ."
docs = "mkdocs serve"
behave = "behave tests/bdd/features/"
pre_test = "task lint"
test = "pytest -s -v tests/"